--- a/CSS/T1/task1.css
+++ b/CSS/T1/task1.css
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
     margin: 30px 50px;
-    width: 200px;
+    width: 300px;
     height: 20px;
     background-color: lightgray;
 }
@@ -135,26 +135,26 @@
     border: 8px solid grey;
 }
 .persegi-1 {
-    margin: 10px;
-    width: 200px;
+    margin: 2vh;
+    width: 30vh;
     height: 400px;
     background-color: gray;
 }
 .persegi-2 {
-    margin: 10px;
-    width: 300px;
+    margin: 2vh;
+    width: 30vh;
     height: 200px;
     background-color: gray;
 }
 .persegi-3 {
-    margin: 10px;
-    width: 200px;
+    margin: 2vh;
+    width: 30vh;
     height: 400px;
     background-color: gray;
 }
 .persegi-4 {
-    margin: 10px;
-    width: 300px;
+    margin: 2vh;
+    width: 30vh;
     height: 200px;;
     background-color: grey;
 }
